--- a/lOGIN/coming-soon.html
+++ b/lOGIN/coming-soon.html
@@ -5,21 +5,157 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon</title>
     <style>
+        /* General body styling */
         body {
             display: flex;
-            justify-content: center;
+            justify-content: flex-start; /* Align content to the left */
             align-items: center;
             height: 100vh;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #4cae4c, #5cb85c);
+            margin: 0;
+            color: #fff;
+            position: relative;
+            overflow: hidden;
+            padding-left: 50px; /* Adjusted padding to make space for chatbot */
         }
+
         h1 {
-            color: #333;
+            color: white;
+            font-size: 3rem;
+            font-weight: bold;
+            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+            margin-bottom: 50px;
+            max-width: 500px; 
+        }
+
+        /* Chatbot Container Styling */
+        .chat-container {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            max-width: 350px;
+            width: 100%;
+            background: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        .chat-header {
+            background: #4cae4c;
+            color: white;
+            padding: 15px;
+            text-align: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+            border-radius: 15px 15px 0 0;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .chat-body {
+            background: #f9f9f9;
+            border-top: 1px solid #4cae4c;
+            height: 300px;
+            overflow-y: auto;
+            display: flex;
+            flex-direction: column;
+            padding: 15px;
+            border-radius: 0 0 15px 15px;
+            font-size: 1rem;
+            line-height: 1.6;
+        }
+
+        .chat-message {
+            margin: 10px 0;
+            padding: 8px 12px;
+            background-color: #e0e0e0;
+            border-radius: 15px;
+            max-width: 80%;
+            word-wrap: break-word;
+        }
+
+        .chat-message.user {
+            background-color: #5cb85c;
+            color: white;
+            align-self: flex-end;
+        }
+
+        /* Input styling */
+        .chat-input {
+            display: flex;
+            border-top: 1px solid  #4cae4c;
+            padding: 10px;
+            background: #fff;
+        }
+
+        .chat-input textarea {
+            flex: 1;
+            padding: 10px;
+            resize: none;
+            border: 1px solid#4cae4c;;
+            border-radius: 10px;
+            font-size: 1rem;
+            outline: none;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        .chat-input button {
+            background-color: #4cae4c;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            margin-left: 10px;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.3s;
+        }
+
+        .chat-input button:hover {
+            background-color: #3d9143;
+        }
+
+/* Bot message styling with fade-in */
+.chat-message.bot {
+    background-color: #f0f0f0;
+    color: #333;
+    align-self: flex-start;
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+
+        /* Keyframes for fade-in animation */
+        @keyframes fadeIn {
+            0% { opacity: 0; transform: translateY(30px); }
+            100% { opacity: 1; transform: translateY(0); }
         }
     </style>
 </head>
 <body>
     <h1>This content is coming soon.</h1>
+
+    <!-- Chatbot Container -->
+    <div class="chat-container">
+        <div class="chat-header">Salon Serenity</div>
+        <div class="chat-body" id="chat-body">
+        
+        </div>
+        <div class="chat-input">
+            <textarea id="chat-input" rows="2" placeholder="Type your message"></textarea>
+            <button onclick="sendMessage()">Send</button>
+        </div>
+    </div>
+
+    <script src="../javascript/chatbot.js"></script> 
 </body>
 </html>
+
 
